statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
      - name: dbcont
        image: chandra123devops/ltirepo:ltidatabase
        ports:
        - containerPort: 3306

        #secret integration
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"

        volumemounts:
        - name: pvc-1
          mountPath: /var/lib/mysql

    volumeclaimTemplates:
    - metadata:
        name: pvc-1
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
